apps/base/kiali/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: monitor
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
  hostnames:
    - kiali.tools.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali-server
          namespace: monitor
          port: 8080
